# RW2-WIC-Codec

./: .gitignore  .gitmessage  ABOUT_COMMITS.md  BUILD_GUIDE_CN.md  CAN_I_REWRITE.md  CHANGELOG.md  CMakeLists.txt  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  PUSH_QUICKSTART.md  PUSH_SIMPLE.md  QUICKSTART.md  README.md  README_CN.md  READY_TO_PUSH.md  REPOSITORY_DESCRIPTIONS.md  REWRITE_COMPLETE.md  REWRITE_HISTORY_GUIDE.md  RW2Codec.def  RW2Codec_Setup.iss  START_HERE_CN.md  TROUBLESHOOTING.md  build.bat  push_github.bat  push_to_github.bat  rewrite_commits.bat  rewrite_history.bat  setup_and_build.bat  项目规划.txt
include/: ClassFactory.h  Common.h  RW2Decoder.h  RW2FrameDecode.h
scripts/: install.bat  uninstall.bat
src/: ClassFactory.cpp  DllMain.cpp  Guids.cpp  RW2Decoder.cpp  RW2FrameDecode.cpp  Registration.cpp  Utils.cpp
tests/: TestDecoder.cpp  TestPerf.cpp
